<resources>
    <string name="app_name">MenuGo</string>
    <string name="slogan">La comida que te gusta, aquí la encontrarás, y en cada plato nuestra pasión culminará</string>
    <string name="signUp">Registratse</string>
    <string name="signIn" translatable="false">Login</string>
    <string name="carro">Carro</string>
    <string name="pedido">Pedidos</string>
    <string name="status0">Pedida</string>
    <string name="status1">En reparto</string>
    <string name="status2">Recibido</string>
    <string name="searchbar">Busque su comida</string>
    <string name="connection">Revise su conexión</string>
    <string name="selectAction">Seleccione acción</string>
    <string name="deleteItemCart">Borrar</string>
    <string name="emptyCart">Su cesta esta vacía!</string>
    <string name="rememberme">Recuérdame</string>
    <string name="phone_number">Número de teléfono</string>
    <string name="name">Nombre</string>
    <string name="changePassword">Cambiar contraseña</string>
    <string name="info">Rellene toda la información</string>
    <string name="change">Cambiar</string>
    <string name="password">Contraseña</string>
    <string name="newPassword">Nueva contraseña</string>
    <string name="repeatPassword">Repita contraseña</string>
    <string name="paymentMethod">Método de pago: </string>
    <string name="onDelivery">En la entrega</string>
    <string name="payed">Pagado</string>
    <string name="unPayed">No pagado</string>
    <string name="secureCode">Código de seguridad</string>
    <string name="forgotpwd">Olvidó su contraseña?</string>
    <string name="introduceSecurityCode">Introduzca su código de seguridad</string>
    <string name="yourpassword">Tu contraseña: </string>
    <string name="submit">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="rateTitle">Califica esta comida</string>
    <string name="rateDesc">Seleccione las estrellas i de su opinión</string>
    <string name="rateHint">Escriba su comentario...</string>
    <string name="shipToAddress">Enviar a esta dirección</string>
    <string name="salir">Salir</string>
    <string name="address">Dirección</string>
    <string name="comment">Comentario</string>
    <string name="canceledPayment">Pago cancelado</string>
    <string name="description">Descripción</string>
    <string name="placeorder">Realizar pedido</string>
    <string name="dialogTitle">Un paso más!</string>
    <string name="dialogText">Introduzca su dirección: </string>
    <string name="confirmOrder">SI</string>
    <string name="denegateOrder">NO</string>
    <string name="orderSubmitted">Pedido realizado!</string>
    <string name="title_activity_home">MenuGo</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">MenuGo</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
</resources>